package com.sc2002.arena.engine;

public enum BattleOutcome {
    ONGOING,
    VICTORY,
    DEFEAT
}
